# oiko-nomic-threads

./: .gitignore  README.md  to-do.txt
arduino related/: IRsensorTest
arduino related/communicationTest/: communicationTest.ino
arduino related/solenoidTest/: solenoidTest.ino
arduino tests and deprecated code/firstWorkingTry/: definitions.h  firstWorkingTry.ino
arduino tests and deprecated code/oiko_threads_HeartExample/: oiko_threads_HeartExample.ino
arduino tests and deprecated code/oiko_threads_ard 2/oiko_threads_ard/: oiko_threads_ard.ino
arduino tests and deprecated code/oiko_threads_arduino/: oiko_threads_arduino.ino  solenoids.h
arduino tests and deprecated code/oiko_threads_encoders_test/: oiko_threads_encoders_test.ino
arduino tests and deprecated code/serialReadTests/: serialReadTests.ino
arduino tests and deprecated code/solenoidTest/: definitions.h
dumpOsc app/: SimpleReceive  SimpleReceive.cpp
oiko-threads app/: AUTHORS  CMakeLists.txt  Doxyfile.in  clear  makefile
oiko-threads app/lib/: arduino-serial-lib.cpp  arduino-serial-lib.h  mar_utils.h
oiko-threads app/src/: #controller.cpp#  #oiko-threads.cpp#  #pattern.cpp#  .#oiko-threads.cpp  arduino-serial-lib.cpp  arduino-serial-lib.h  constants.h  controller.cpp  controller.h  data.cpp  data.h  decoration.cpp  decoration.h  helper.cpp  helper.h  mar_utils.h  ofSerial.h  oiko-threads.cpp  oikoThreadsApp.cpp  oikoThreadsApp.h  pattern.cpp  pattern.h  segment.cpp  segment.h  sendOsc.cpp  sendOsc.h  settings.cpp  settings.h  stitch_test.cpp  tests.cpp  visualizer.cpp  visualizer.h
oiko-threads arduino/oiko_threads_arduino2/: oiko_threads_arduino2.ino
oiko_threads_ard/: oiko_threads_ard.ino
oiko_threads_arduino/: oiko_threads_arduino.ino
oiko_threads_arduino2/: oiko_threads_arduino2.ino
